--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "firebase/php-jwt": "^6.10",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1"
@@ -23,6 +24,12 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Auth\\": "src/Auth/",
+            "Fleet\\": "src/Fleet/",
+            "Rental\\": "src/Rental/",
+            "Customer\\": "src/Customer/",
+            "Maintenance\\": "src/Maintenance/",
+            "Shared\\": "src/Shared/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
