--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   # Database (PostgreSQL + PostGIS)
-  db:
+  postgres:
     image: postgis/postgis:16-3.4
     container_name: postgres-db
     restart: unless-stopped
@@ -125,7 +125,7 @@ services:
     restart: unless-stopped
     environment:
       # Database
-      DB_HOST: db
+      DB_HOST: postgres
       DB_PORT: 5432
       DB_NAME: ${DB_NAME:-veloflott_db}
       DB_USER: ${DB_USER:-veloflott_user}
@@ -153,7 +153,7 @@ services:
       retries: 5
       start_period: 10s
     depends_on:
-      db:
+      postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
