--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/veloflott-api:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/veloflott-api:$BUILD_ID'
       - '-t'
       - 'gcr.io/$PROJECT_ID/veloflott-api:latest'
       - '-f'
@@ -18,7 +18,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/veloflott-api:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/veloflott-api:$BUILD_ID'
 
   - name: 'gcr.io/cloud-builders/docker'
     args:
@@ -47,7 +47,7 @@ steps:
       - 'deploy'
       - 'veloflott-api'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/veloflott-api:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/veloflott-api:$BUILD_ID'
       - '--region'
       - '$_REGION'
       - '--platform'
@@ -77,7 +77,7 @@ substitutions:
 
 # Images à stocker dans Container Registry
 images:
-  - 'gcr.io/$PROJECT_ID/veloflott-api:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/veloflott-api:$BUILD_ID'
   - 'gcr.io/$PROJECT_ID/veloflott-api:latest'
 
 # Options de build
