--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -77,6 +77,7 @@ RUN mkdir -p /var/www/html/storage/logs \
     && mkdir -p /var/www/html/storage/framework/cache \
     && mkdir -p /var/www/html/storage/framework/sessions \
     && mkdir -p /var/www/html/storage/framework/views \
+    && mkdir -p /var/run \
     && chown -R www-data:www-data /var/www/html/storage
 
 # Expose port 8080 (Cloud Run requirement)
