feat(maintenance): added maintenance module

--- a/.env.production.example
+++ b/.env.production.example
@@ -5,7 +5,7 @@ APP_NAME=Veloflott
 APP_ENV=production
 APP_KEY=  # Générer avec: php artisan key:generate --show
 APP_DEBUG=false
-APP_URL=https://veloflott-api-xxxxx.run.app
+APP_URL=https://veloflott-api-99101461725.europe-west9.run.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
