feat(fleet, rentals, photos): miscellaneous evolutions for frontend app

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,15 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
+BIKE_PHOTOS_DRIVER=local
+
+# Google Cloud Storage (Production)
+# GCS_PROJECT_ID=your-project-id
+# GCS_BUCKET=veloflott-bikes-photos
+# GCS_KEY_FILE=/path/to/service-account-key.json
+# GCS_PATH_PREFIX=
+# GCS_STORAGE_API_URI=https://storage.googleapis.com
+
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
