--- a/docker/nginx/conf.d/webservices.conf
+++ b/docker/nginx/conf.d/webservices.conf
@@ -34,6 +34,32 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Serve bike photos directly from public/storage (symlink)
+    location /storage/ {
+        alias /var/www/veloflott/public/storage/;
+
+        # CORS headers to allow frontend app access
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
+
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        expires max;
+        add_header Cache-Control "public" always;
+        access_log off;
+        autoindex off;
+    }
+
     location ~ \.php$ {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
