--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,16 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.9",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "pestphp/pest": "^3.8",
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^11.5.3",
+        "squizlabs/php_codesniffer": "^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -55,7 +59,22 @@
         ],
         "test": [
             "@php artisan config:clear --ansi",
-            "@php artisan test"
+            "./vendor/bin/pest"
+        ],
+        "test:unit": "./vendor/bin/pest --testsuite=Unit",
+        "test:feature": "./vendor/bin/pest --testsuite=Feature",
+        "test:coverage": "./vendor/bin/pest --coverage",
+        "cs": "./vendor/bin/phpcs",
+        "cs:fix": "./vendor/bin/phpcbf",
+        "stan": "./vendor/bin/phpstan analyse --memory-limit=2G",
+        "stan:baseline": "./vendor/bin/phpstan analyse --memory-limit=2G --generate-baseline",
+        "lint": [
+            "@cs",
+            "@stan"
+        ],
+        "quality": [
+            "@lint",
+            "@test"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
