fix(app): fix cors issue

--- a/.env.production.example
+++ b/.env.production.example
@@ -7,6 +7,9 @@ APP_KEY=  # Générer avec: php artisan key:generate --show
 APP_DEBUG=false
 APP_URL=https://veloflott-api-99101461725.europe-west9.run.app
 
+# CORS - Origines autorisées (séparées par des virgules)
+CORS_ALLOWED_ORIGINS=https://veloflott-pwa-icgik5mfkq-od.a.run.app,https://veloflott-api-99101461725.europe-west9.run.app
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
