--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-interaction
 
       - name: Run PHP-CS-Fixer
-        run: php ./vendor/bin/php-cs-fixer fix --dry-run --stop-on-violation --using-cache=no
+        run: php ./vendor/bin/phpcs fix --dry-run --stop-on-violation --using-cache=no
 
   pest:
     name: Pest Tests
