--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,6 +44,7 @@ steps:
       - 'migrate'
       - '--force'
       - '--no-interaction'
+      - '-vvv'
     id: 'run-migrations'
     waitFor: ['push-latest']
 
