fix(docker): add .env.production and fix DB connection
- Created .env.production with PostgreSQL configuration
- Removed sensitive vars (DB_PASSWORD, APP_KEY) from .env.production
- Modified Dockerfile to copy .env.production as .env
- Updated cloudbuild.yaml with complete DB env vars and secrets
- Fixed SQLite default connection issue
- All secrets now injected via Secret Manager

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 APP_NAME=Veloflott
 APP_ENV=production
-APP_KEY=
+# APP_KEY is injected via environment variable or secret
 APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=https://veloflott-api-99101461725.europe-west9.run.app
@@ -24,7 +24,7 @@ DB_HOST=/cloudsql/project-08eb5a0c-d370-4877-a5a:europe-west9:veloflott-db
 DB_PORT=5432
 DB_DATABASE=veloflott_db
 DB_USERNAME=veloflott_user
-DB_PASSWORD=
+# DB_PASSWORD is injected via environment variable or secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
