--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,11 +33,11 @@ steps:
   - name: 'gcr.io/google-appengine/exec-wrapper'
     env:
       - 'DB_CONNECTION=pgsql'
-      - 'DB_HOST=localhost'
+      - 'DB_HOST=/cloudsql/project-08eb5a0c-d370-4877-a5a:europe-west9:veloflott-db'
       - 'DB_PORT=5432'
       - 'DB_DATABASE=veloflott_db'
       - 'DB_USERNAME=veloflott_user'
-      - 'DB_PASSWORD=${_DB_PASSWORD}'
+    secretEnv: ['DB_PASSWORD']
     args:
       - '-i'
       - 'gcr.io/$PROJECT_ID/veloflott-api:$BUILD_ID'
@@ -87,7 +87,6 @@ steps:
 substitutions:
   _REGION: europe-west9
   _CLOUD_SQL_CONNECTION_NAME: project-08eb5a0c-d370-4877-a5a:europe-west9:veloflott-db
-  _DB_PASSWORD: password
 
 # Images à stocker dans Container Registry
 images:
@@ -98,6 +97,12 @@ images:
 options:
   machineType: 'N1_HIGHCPU_8'
   logging: CLOUD_LOGGING_ONLY
+
+# Secrets depuis Secret Manager
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/veloflott-db-password/versions/latest
+      env: 'DB_PASSWORD'
 
 # Timeout du build (10 minutes)
 timeout: 600s
