--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,21 +31,33 @@ steps:
   # Step 3: Run database migrations
   # Exécute les migrations avant le déploiement pour s'assurer que la base de données est à jour
   - name: 'gcr.io/google-appengine/exec-wrapper'
-    env:
-      - 'APP_ENV=production'
-      - 'APP_DEBUG=false'
-      - 'LOG_CHANNEL=stderr'
-      - 'DB_CONNECTION=pgsql'
-      - 'DB_HOST=/cloudsql/project-08eb5a0c-d370-4877-a5a:europe-west9:veloflott-db'
-      - 'DB_PORT=5432'
-      - 'DB_DATABASE=veloflott_db'
-      - 'DB_USERNAME=veloflott_user'
     secretEnv: ['DB_PASSWORD', 'APP_KEY']
     args:
       - '-i'
       - 'gcr.io/$PROJECT_ID/veloflott-api:$BUILD_ID'
       - '-s'
       - '$_CLOUD_SQL_CONNECTION_NAME'
+      # Passer les env vars AU CONTAINER via -e
+      - '-e'
+      - 'APP_ENV=production'
+      - '-e'
+      - 'APP_DEBUG=false'
+      - '-e'
+      - 'LOG_CHANNEL=stderr'
+      - '-e'
+      - 'DB_CONNECTION=pgsql'
+      - '-e'
+      - 'DB_HOST=/cloudsql/$_CLOUD_SQL_CONNECTION_NAME'
+      - '-e'
+      - 'DB_PORT=5432'
+      - '-e'
+      - 'DB_DATABASE=veloflott_db'
+      - '-e'
+      - 'DB_USERNAME=veloflott_user'
+      - '-e'
+      - 'DB_PASSWORD=$DB_PASSWORD'
+      - '-e'
+      - 'APP_KEY=$APP_KEY'
       - '--'
       - 'php'
       - 'artisan'
