fix(ci): escape secret vars with $$ for Cloud Build
- Used $$DB_PASSWORD instead of $DB_PASSWORD
- Cloud Build interprets $ as substitution (must start with _)
- $$ escapes to env var from secretEnv

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -55,9 +55,9 @@ steps:
       - '-e'
       - 'DB_USERNAME=veloflott_user'
       - '-e'
-      - 'DB_PASSWORD=$DB_PASSWORD'
+      - 'DB_PASSWORD=$$DB_PASSWORD'
       - '-e'
-      - 'APP_KEY=$APP_KEY'
+      - 'APP_KEY=$$APP_KEY'
       - '--'
       - 'php'
       - 'artisan'
