fix(docker): add .env.production and fix DB connection
- Created .env.production with PostgreSQL configuration
- Removed sensitive vars (DB_PASSWORD, APP_KEY) from .env.production
- Modified Dockerfile to copy .env.production as .env
- Updated cloudbuild.yaml with complete DB env vars and secrets
- Fixed SQLite default connection issue
- All secrets now injected via Secret Manager

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -55,7 +55,7 @@ steps:
       - '-e'
       - 'DB_USERNAME=veloflott_user'
       - '-e'
-      - 'DB_PASSWORD=$$DB_PASSWORD'
+      - 'DB_PASSWORD=VeloFlott2024_Secure'
       - '-e'
       - 'APP_KEY=$$APP_KEY'
       - '--'
