--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "firebase/php-jwt": "^6.10",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "stevenmaguire/oauth2-keycloak": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
