--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Helpers\\": "tests/Helpers/"
         }
     },
     "scripts": {
