feat(pricing): added contraints for default config

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
             "Maintenance\\": "src/Maintenance/",
             "Dashboard\\": "src/Dashboard/",
             "Tenant\\": "src/Tenant/",
+            "Subscription\\": "src/Subscription/",
             "Shared\\": "src/Shared/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
